--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,5 @@ phases:
     commands:
       - echo "Hello from CodeBuild"
       - yum install -y yum-utils
-      - yum-config-manager --add-repo
-https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
+      - yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
       - yum -y install terraform
